compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/instance_ir.kt
// TARGET_BACKEND: JVM_IR

object O {
    val INSTANCE: O = null!!
}

<!CONFLICTING_JVM_DECLARATIONS!>object O2<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>lateinit var INSTANCE: O2<!>
}